[gd_scene load_steps=39 format=4 uid="uid://bongpq25mn3sw"]

[ext_resource type="PackedScene" uid="uid://db0l5d6phwago" path="res://source/actors/building pieces/basic/stone_wall.tscn" id="1"]
[ext_resource type="Material" uid="uid://bwsdy2e3xouar" path="res://source/assets/materials/rock/rock_triplanar.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://baapn46f55fhe" path="res://source/actors/building pieces/pillar.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cx0vwjgdcwwar" path="res://source/actors/decor/misc/torch_holder.tscn" id="4"]
[ext_resource type="Script" uid="uid://dbb4ah7xn0gxw" path="res://source/actors/building pieces/stone_door_wall.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://cfon2el4gkbsp" path="res://source/assets/sounds/misc/fire_lit.ogg" id="6"]
[ext_resource type="Texture2D" uid="uid://dd8c8jqj8gip0" path="res://source/assets/particles/fire_sprite.png" id="7"]
[ext_resource type="PackedScene" uid="uid://d0k38qb725eo3" path="res://source/actors/building pieces/archways/large_archway.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://c2xauo4nitqjr" path="res://source/actors/misc/lever_count_light.tscn" id="10"]

[sub_resource type="BoxMesh" id="1"]
material = ExtResource("2")
size = Vector3(4, 5, 1)

[sub_resource type="ConvexPolygonShape3D" id="22"]
points = PackedVector3Array(-2, -2.5, -0.5, -2, -2.5, 0.5, -2, 2.5, -0.5, 2, -2.5, -0.5, 2, -2.5, 0.5, -2, 2.5, 0.5, 2, 2.5, -0.5, 2, 2.5, 0.5)

[sub_resource type="Shader" id="Shader_q7vuh"]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode cull_front;

uniform float outlineSize = 0.02;
uniform bool outlineOn = false;

void vertex()
{
	if (outlineOn)
		VERTEX += NORMAL * outlineSize;
}


void fragment()
{
	if (outlineOn)
		ALBEDO = vec3(1.0, 1.0, 1.0);
}


void light()
{
	if (outlineOn)
	{
		DIFFUSE_LIGHT = vec3(1.0, 1.0, 1.0);
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_whbib"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_q7vuh")
shader_parameter/outlineSize = 0.02
shader_parameter/outlineOn = false

[sub_resource type="Curve" id="10"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.244565, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.167045), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="6"]
curve = SubResource("10")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_c00e2"]
resource_local_to_scene = true
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 0.5
initial_velocity_max = 0.75
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("6")

[sub_resource type="StandardMaterial3D" id="16"]
transparency = 1
blend_mode = 1
shading_mode = 0
albedo_texture = ExtResource("7")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="17"]
resource_local_to_scene = true
material = SubResource("16")
size = Vector2(0.25, 0.25)

[sub_resource type="Curve" id="Curve_1deld"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.244565, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.167045), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ptn6u"]
curve = SubResource("Curve_1deld")

[sub_resource type="ParticleProcessMaterial" id="18"]
resource_local_to_scene = true
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3(0, 1, 0)
spread = 35.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_ptn6u")

[sub_resource type="Shader" id="Shader_ujidr"]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode cull_front;

uniform float outlineSize = 0.02;
uniform bool outlineOn = false;

void vertex()
{
	if (outlineOn)
		VERTEX += NORMAL * outlineSize;
}


void fragment()
{
	if (outlineOn)
		ALBEDO = vec3(1.0, 1.0, 1.0);
}


void light()
{
	if (outlineOn)
	{
		DIFFUSE_LIGHT = vec3(1.0, 1.0, 1.0);
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m07gd"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_ujidr")
shader_parameter/outlineSize = 0.02
shader_parameter/outlineOn = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4t0fr"]
resource_local_to_scene = true
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 0.5
initial_velocity_max = 0.75
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("6")

[sub_resource type="QuadMesh" id="20"]
resource_local_to_scene = true
material = SubResource("16")
size = Vector2(0.25, 0.25)

[sub_resource type="ParticleProcessMaterial" id="21"]
resource_local_to_scene = true
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3(0, 1, 0)
spread = 35.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_ptn6u")

[sub_resource type="CylinderShape3D" id="2"]
height = 20.0
radius = 40.0

[sub_resource type="Animation" id="13"]
resource_name = "torch_light_anim"
length = 0.9
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../torch_holder/fire/light:omni_range")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 20.0, 15.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../torch_holder2/fire/light:omni_range")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 20.0, 15.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../torch_holder/fire/lit_fire_particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../torch_holder2/fire/lit_fire_particles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n5cab"]
_data = {
&"torch_light_anim": SubResource("13")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8m821"]
resource_local_to_scene = true
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_pa7e1"]
_surfaces = [{
"aabb": AABB(-0.282843, 1.69873e-06, 7.45058e-09, 0.565685, 0.565685, 0.13001),
"format": 34359742465,
"index_count": 60,
"index_data": PackedByteArray("AAACAAEAAAADAAIABAAGAAUABAAHAAYACAAFAAYACAAJAAUABQAJAAQACAAEAAkACAAHAAQABwAKAAYABwACAAoACgAIAAYAAQAIAAoABwABAAIABwAIAAEAAAALAAMAAAAKAAsAAAABAAoAAgALAAoAAgADAAsA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("oMlOPhIEBD+4HgU+oMlOPhIEBD8J16M9oMlOvhIEBD8J16M9oMlOvhIEBD+4HgU+w9CQvt/QED8AAAAyVVUVsgAA5DUAAAAyVVUVsgAA5DUJ16M9w9CQvt/QED8J16M9w9CQPt/QED8J16M9w9CQPt/QED8AAAAyVVUVshH65D0J16M9VVUVshH65D24HgU+")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_70811"]
resource_local_to_scene = true
_surfaces = [{
"aabb": AABB(-0.282843, 1.69873e-06, 7.45058e-09, 0.565685, 0.565685, 0.13001),
"attribute_data": PackedByteArray("LabMPgQTUD4tpsw+BBNQPsIEFD/AYso8wgQUP8BiyjwAACA/AABAPwAAwD4AAEA/AADAPgAAgD8AACA/AACAPwAAwD4AAIA+AAAAPgAAgD4AAAA+AAAAPwAAwD4AAAA/AADAPgAAQD8AACA/AABAPwAAwD4AAAA/AADAPgAAgD4AAMA+AAAAPwAAID8AAEA/AAAgPwAAAAAAACA/AAAAAAAAwD4AAAAALKbMPsBiyjzCBBQ/wGLKPCymzD7AYso8AADAPgAAAAAAAMA+AACAPi2mzD4EE1A+AAAgPwAAAADCBBQ/wGLKPC2mzD4EE1A+AADAPgAAgD4tpsw+BBNQPsIEFD/AYso8LKbMPsBiyjwtpsw+BBNQPiymzD7AYso8LKbMPsBiyjwtpsw+BBNQPsIEFD/AYso8LKbMPsBiyjwspsw+wGLKPMIEFD/AYso8"),
"format": 34359742487,
"index_count": 60,
"index_data": PackedByteArray("AAACAAEAAAADAAIABAAGAAUABAAHAAYACAAKAAkACAALAAoADAAOAA0ADwARABAADwASABEAEwAVABQAEwAWABUAFwAZABgAGgAZABcAGwAdABwAGwAeAB0AHwAhACAAIgAkACMAIgAlACQAJgAoACcAJgApACgA"),
"material": SubResource("StandardMaterial3D_8m821"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 42,
"vertex_data": PackedByteArray("oMlOPhIEBD+4HgU+oMlOPhIEBD8J16M9oMlOvhIEBD8J16M9oMlOvhIEBD+4HgU+w9CQvt/QED8AAAAyVVUVsgAA5DUAAAAyVVUVsgAA5DUJ16M9w9CQvt/QED8J16M9w9CQPt/QED8J16M9VVUVsgAA5DUJ16M9VVUVsgAA5DUAAAAyw9CQPt/QED8AAAAyVVUVsgAA5DUAAAAyw9CQvt/QED8AAAAyw9CQPt/QED8AAAAyw9CQPt/QED8J16M9w9CQPt/QED8AAAAyw9CQvt/QED8AAAAyw9CQvt/QED8J16M9w9CQvt/QED8J16M9VVUVsgAA5DUJ16M9VVUVshH65D0J16M9oMlOvhIEBD8J16M9VVUVshH65D0J16M9VVUVsgAA5DUJ16M9w9CQPt/QED8J16M9oMlOPhIEBD8J16M9w9CQvt/QED8J16M9oMlOvhIEBD8J16M9oMlOPhIEBD8J16M9w9CQPt/QED8J16M9oMlOPhIEBD+4HgU+oMlOvhIEBD+4HgU+VVUVshH65D24HgU+oMlOPhIEBD+4HgU+VVUVshH65D24HgU+VVUVshH65D0J16M9oMlOPhIEBD8J16M9oMlOvhIEBD8J16M9VVUVshH65D0J16M9VVUVshH65D24HgU+oMlOvhIEBD+4HgU+/3///////7//f///////v/9///////+//3///////7+qKlRVVFWp6qoqVFVUVanqqipUVVRVqeqqKlRVVFWp6lTVVFWqqqnqVNVUVaqqqepU1VRVqqqp6lTVVFWqqqnq/////1RVqer/////VFWp6v////9UVanq/3///ykO/7//f///2w//v/9///8AAOLB/3///wAA4ML/f/9/VFWp6v9//39UVanq/3//f1VVqer/f/9/VVWp6v9//39VVanq/3//f1RVqer/f/9/VFWp6v9//39VVanq/3//f1RVqer/f/9/VVWp6v9//39VVanq/3//f1RVqer/f/9/VFWp6v9//39UVanq/3//f1RVqepU1VRV////v1TVVFX///+/VNVUVf///79U1VRV////v6oqVVX///+/qipVVf///7+qKlVV////v6oqVVX///+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_pa7e1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pxapc"]
resource_local_to_scene = true
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_hdf6d"]
resource_local_to_scene = true
_surfaces = [{
"aabb": AABB(-0.282843, 1.69873e-06, 7.45058e-09, 0.565685, 0.565685, 0.13001),
"attribute_data": PackedByteArray("LabMPgQTUD4tpsw+BBNQPsIEFD/AYso8wgQUP8BiyjwAACA/AABAPwAAwD4AAEA/AADAPgAAgD8AACA/AACAPwAAwD4AAIA+AAAAPgAAgD4AAAA+AAAAPwAAwD4AAAA/AADAPgAAQD8AACA/AABAPwAAwD4AAAA/AADAPgAAgD4AAMA+AAAAPwAAID8AAEA/AAAgPwAAAAAAACA/AAAAAAAAwD4AAAAALKbMPsBiyjzCBBQ/wGLKPCymzD7AYso8AADAPgAAAAAAAMA+AACAPi2mzD4EE1A+AAAgPwAAAADCBBQ/wGLKPC2mzD4EE1A+AADAPgAAgD4tpsw+BBNQPsIEFD/AYso8LKbMPsBiyjwtpsw+BBNQPiymzD7AYso8LKbMPsBiyjwtpsw+BBNQPsIEFD/AYso8LKbMPsBiyjwspsw+wGLKPMIEFD/AYso8"),
"format": 34359742487,
"index_count": 60,
"index_data": PackedByteArray("AAACAAEAAAADAAIABAAGAAUABAAHAAYACAAKAAkACAALAAoADAAOAA0ADwARABAADwASABEAEwAVABQAEwAWABUAFwAZABgAGgAZABcAGwAdABwAGwAeAB0AHwAhACAAIgAkACMAIgAlACQAJgAoACcAJgApACgA"),
"material": SubResource("StandardMaterial3D_pxapc"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 42,
"vertex_data": PackedByteArray("oMlOPhIEBD+4HgU+oMlOPhIEBD8J16M9oMlOvhIEBD8J16M9oMlOvhIEBD+4HgU+w9CQvt/QED8AAAAyVVUVsgAA5DUAAAAyVVUVsgAA5DUJ16M9w9CQvt/QED8J16M9w9CQPt/QED8J16M9VVUVsgAA5DUJ16M9VVUVsgAA5DUAAAAyw9CQPt/QED8AAAAyVVUVsgAA5DUAAAAyw9CQvt/QED8AAAAyw9CQPt/QED8AAAAyw9CQPt/QED8J16M9w9CQPt/QED8AAAAyw9CQvt/QED8AAAAyw9CQvt/QED8J16M9w9CQvt/QED8J16M9VVUVsgAA5DUJ16M9VVUVshH65D0J16M9oMlOvhIEBD8J16M9VVUVshH65D0J16M9VVUVsgAA5DUJ16M9w9CQPt/QED8J16M9oMlOPhIEBD8J16M9w9CQvt/QED8J16M9oMlOvhIEBD8J16M9oMlOPhIEBD8J16M9w9CQPt/QED8J16M9oMlOPhIEBD+4HgU+oMlOvhIEBD+4HgU+VVUVshH65D24HgU+oMlOPhIEBD+4HgU+VVUVshH65D24HgU+VVUVshH65D0J16M9oMlOPhIEBD8J16M9oMlOvhIEBD8J16M9VVUVshH65D0J16M9VVUVshH65D24HgU+oMlOvhIEBD+4HgU+/3///////7//f///////v/9///////+//3///////7+qKlRVVFWp6qoqVFVUVanqqipUVVRVqeqqKlRVVFWp6lTVVFWqqqnqVNVUVaqqqepU1VRVqqqp6lTVVFWqqqnq/////1RVqer/////VFWp6v////9UVanq/3///ykO/7//f///2w//v/9///8AAOLB/3///wAA4ML/f/9/VFWp6v9//39UVanq/3//f1VVqer/f/9/VVWp6v9//39VVanq/3//f1RVqer/f/9/VFWp6v9//39VVanq/3//f1RVqer/f/9/VVWp6v9//39VVanq/3//f1RVqer/f/9/VFWp6v9//39UVanq/3//f1RVqepU1VRV////v1TVVFX///+/VNVUVf///79U1VRV////v6oqVVX///+/qipVVf///7+qKlVV////v6oqVVX///+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_pa7e1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ks13j"]
resource_local_to_scene = true
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_titls"]
resource_local_to_scene = true
_surfaces = [{
"aabb": AABB(-0.282843, 1.69873e-06, 7.45058e-09, 0.565685, 0.565685, 0.13001),
"attribute_data": PackedByteArray("LabMPgQTUD4tpsw+BBNQPsIEFD/AYso8wgQUP8BiyjwAACA/AABAPwAAwD4AAEA/AADAPgAAgD8AACA/AACAPwAAwD4AAIA+AAAAPgAAgD4AAAA+AAAAPwAAwD4AAAA/AADAPgAAQD8AACA/AABAPwAAwD4AAAA/AADAPgAAgD4AAMA+AAAAPwAAID8AAEA/AAAgPwAAAAAAACA/AAAAAAAAwD4AAAAALKbMPsBiyjzCBBQ/wGLKPCymzD7AYso8AADAPgAAAAAAAMA+AACAPi2mzD4EE1A+AAAgPwAAAADCBBQ/wGLKPC2mzD4EE1A+AADAPgAAgD4tpsw+BBNQPsIEFD/AYso8LKbMPsBiyjwtpsw+BBNQPiymzD7AYso8LKbMPsBiyjwtpsw+BBNQPsIEFD/AYso8LKbMPsBiyjwspsw+wGLKPMIEFD/AYso8"),
"format": 34359742487,
"index_count": 60,
"index_data": PackedByteArray("AAACAAEAAAADAAIABAAGAAUABAAHAAYACAAKAAkACAALAAoADAAOAA0ADwARABAADwASABEAEwAVABQAEwAWABUAFwAZABgAGgAZABcAGwAdABwAGwAeAB0AHwAhACAAIgAkACMAIgAlACQAJgAoACcAJgApACgA"),
"material": SubResource("StandardMaterial3D_ks13j"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 42,
"vertex_data": PackedByteArray("oMlOPhIEBD+4HgU+oMlOPhIEBD8J16M9oMlOvhIEBD8J16M9oMlOvhIEBD+4HgU+w9CQvt/QED8AAAAyVVUVsgAA5DUAAAAyVVUVsgAA5DUJ16M9w9CQvt/QED8J16M9w9CQPt/QED8J16M9VVUVsgAA5DUJ16M9VVUVsgAA5DUAAAAyw9CQPt/QED8AAAAyVVUVsgAA5DUAAAAyw9CQvt/QED8AAAAyw9CQPt/QED8AAAAyw9CQPt/QED8J16M9w9CQPt/QED8AAAAyw9CQvt/QED8AAAAyw9CQvt/QED8J16M9w9CQvt/QED8J16M9VVUVsgAA5DUJ16M9VVUVshH65D0J16M9oMlOvhIEBD8J16M9VVUVshH65D0J16M9VVUVsgAA5DUJ16M9w9CQPt/QED8J16M9oMlOPhIEBD8J16M9w9CQvt/QED8J16M9oMlOvhIEBD8J16M9oMlOPhIEBD8J16M9w9CQPt/QED8J16M9oMlOPhIEBD+4HgU+oMlOvhIEBD+4HgU+VVUVshH65D24HgU+oMlOPhIEBD+4HgU+VVUVshH65D24HgU+VVUVshH65D0J16M9oMlOPhIEBD8J16M9oMlOvhIEBD8J16M9VVUVshH65D0J16M9VVUVshH65D24HgU+oMlOvhIEBD+4HgU+/3///////7//f///////v/9///////+//3///////7+qKlRVVFWp6qoqVFVUVanqqipUVVRVqeqqKlRVVFWp6lTVVFWqqqnqVNVUVaqqqepU1VRVqqqp6lTVVFWqqqnq/////1RVqer/////VFWp6v////9UVanq/3///ykO/7//f///2w//v/9///8AAOLB/3///wAA4ML/f/9/VFWp6v9//39UVanq/3//f1VVqer/f/9/VVWp6v9//39VVanq/3//f1RVqer/f/9/VFWp6v9//39VVanq/3//f1RVqer/f/9/VVWp6v9//39VVanq/3//f1RVqer/f/9/VFWp6v9//39UVanq/3//f1RVqepU1VRV////v1TVVFX///+/VNVUVf///79U1VRV////v6oqVVX///+/qipVVf///7+qKlVV////v6oqVVX///+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_pa7e1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sqg2k"]
resource_local_to_scene = true
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_b7tw2"]
resource_local_to_scene = true
_surfaces = [{
"aabb": AABB(-0.282843, 1.69873e-06, 7.45058e-09, 0.565685, 0.565685, 0.13001),
"attribute_data": PackedByteArray("LabMPgQTUD4tpsw+BBNQPsIEFD/AYso8wgQUP8BiyjwAACA/AABAPwAAwD4AAEA/AADAPgAAgD8AACA/AACAPwAAwD4AAIA+AAAAPgAAgD4AAAA+AAAAPwAAwD4AAAA/AADAPgAAQD8AACA/AABAPwAAwD4AAAA/AADAPgAAgD4AAMA+AAAAPwAAID8AAEA/AAAgPwAAAAAAACA/AAAAAAAAwD4AAAAALKbMPsBiyjzCBBQ/wGLKPCymzD7AYso8AADAPgAAAAAAAMA+AACAPi2mzD4EE1A+AAAgPwAAAADCBBQ/wGLKPC2mzD4EE1A+AADAPgAAgD4tpsw+BBNQPsIEFD/AYso8LKbMPsBiyjwtpsw+BBNQPiymzD7AYso8LKbMPsBiyjwtpsw+BBNQPsIEFD/AYso8LKbMPsBiyjwspsw+wGLKPMIEFD/AYso8"),
"format": 34359742487,
"index_count": 60,
"index_data": PackedByteArray("AAACAAEAAAADAAIABAAGAAUABAAHAAYACAAKAAkACAALAAoADAAOAA0ADwARABAADwASABEAEwAVABQAEwAWABUAFwAZABgAGgAZABcAGwAdABwAGwAeAB0AHwAhACAAIgAkACMAIgAlACQAJgAoACcAJgApACgA"),
"material": SubResource("StandardMaterial3D_sqg2k"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 42,
"vertex_data": PackedByteArray("oMlOPhIEBD+4HgU+oMlOPhIEBD8J16M9oMlOvhIEBD8J16M9oMlOvhIEBD+4HgU+w9CQvt/QED8AAAAyVVUVsgAA5DUAAAAyVVUVsgAA5DUJ16M9w9CQvt/QED8J16M9w9CQPt/QED8J16M9VVUVsgAA5DUJ16M9VVUVsgAA5DUAAAAyw9CQPt/QED8AAAAyVVUVsgAA5DUAAAAyw9CQvt/QED8AAAAyw9CQPt/QED8AAAAyw9CQPt/QED8J16M9w9CQPt/QED8AAAAyw9CQvt/QED8AAAAyw9CQvt/QED8J16M9w9CQvt/QED8J16M9VVUVsgAA5DUJ16M9VVUVshH65D0J16M9oMlOvhIEBD8J16M9VVUVshH65D0J16M9VVUVsgAA5DUJ16M9w9CQPt/QED8J16M9oMlOPhIEBD8J16M9w9CQvt/QED8J16M9oMlOvhIEBD8J16M9oMlOPhIEBD8J16M9w9CQPt/QED8J16M9oMlOPhIEBD+4HgU+oMlOvhIEBD+4HgU+VVUVshH65D24HgU+oMlOPhIEBD+4HgU+VVUVshH65D24HgU+VVUVshH65D0J16M9oMlOPhIEBD8J16M9oMlOvhIEBD8J16M9VVUVshH65D0J16M9VVUVshH65D24HgU+oMlOvhIEBD+4HgU+/3///////7//f///////v/9///////+//3///////7+qKlRVVFWp6qoqVFVUVanqqipUVVRVqeqqKlRVVFWp6lTVVFWqqqnqVNVUVaqqqepU1VRVqqqp6lTVVFWqqqnq/////1RVqer/////VFWp6v////9UVanq/3///ykO/7//f///2w//v/9///8AAOLB/3///wAA4ML/f/9/VFWp6v9//39UVanq/3//f1VVqer/f/9/VVWp6v9//39VVanq/3//f1RVqer/f/9/VFWp6v9//39VVanq/3//f1RVqer/f/9/VVWp6v9//39VVanq/3//f1RVqer/f/9/VFWp6v9//39UVanq/3//f1RVqepU1VRV////v1TVVFX///+/VNVUVf///79U1VRV////v6oqVVX///+/qipVVf///7+qKlVV////v6oqVVX///+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_pa7e1")

[node name="stone_door_wall" type="Node3D"]
script = ExtResource("5")

[node name="stone_archway" parent="." instance=ExtResource("9")]
transform = Transform3D(-1, 0, -3.01992e-07, 0, 1, 0, 1.50996e-07, 0, -2, 1.25, -0.25, -0.5)

[node name="pillar" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.25, 0.75, 2)

[node name="pillar2" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.75, 0.75, 2)

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 1.75, 0)

[node name="stone_door" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.75)
mesh = SubResource("1")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.75)
shape = SubResource("22")

[node name="stone_wall" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.625, 3.75, 0.75)
size = Vector3(6.25, 8, 1)

[node name="stone_wall2" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.125, 3.75, 0.75)
size = Vector3(6.25, 8, 1)

[node name="stone_wall3" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.75, 3.75, -1.375)
size = Vector3(8, 8, 3.25)

[node name="stone_wall4" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.25, 3.75, -1.375)
size = Vector3(8, 8, 3.25)

[node name="stone_wall5" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 6, -0.25)
size = Vector3(4, 2.5, 1)

[node name="torch_holder" parent="." instance=ExtResource("4")]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 6.25, 1.5, 2.5)
default_range = 15.0
lit = false

[node name="mesh" parent="torch_holder" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.848048, 0.529919, 0, -0.529919, 0.848048, -0.0220985, 0.156182, -0.216999)
material_overlay = SubResource("ShaderMaterial_whbib")

[node name="fire_particles" parent="torch_holder/fire" index="0"]
process_material = SubResource("ParticleProcessMaterial_c00e2")
draw_pass_1 = SubResource("17")

[node name="lit_fire_particles" parent="torch_holder/fire" index="1"]
process_material = SubResource("18")

[node name="light" parent="torch_holder/fire" index="2"]
light_energy = 0.0
omni_range = 0.0

[node name="torch_holder2" parent="." instance=ExtResource("4")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -3.75, 1.5, 2.5)
default_range = 15.0
lit = false

[node name="mesh" parent="torch_holder2" index="0"]
material_overlay = SubResource("ShaderMaterial_m07gd")

[node name="fire_particles" parent="torch_holder2/fire" index="0"]
process_material = SubResource("ParticleProcessMaterial_4t0fr")
draw_pass_1 = SubResource("20")

[node name="lit_fire_particles" parent="torch_holder2/fire" index="1"]
process_material = SubResource("21")

[node name="light" parent="torch_holder2/fire" index="2"]
light_energy = 0.0
omni_range = 0.0

[node name="fire_light_area" type="Area3D" parent="."]
collision_mask = 2

[node name="collision_shape" type="CollisionShape3D" parent="fire_light_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
shape = SubResource("2")

[node name="torch_light_player" type="AnimationPlayer" parent="."]
root_node = NodePath("../fire_light_area/collision_shape")
libraries = {
"": SubResource("AnimationLibrary_n5cab")
}

[node name="fire_lit_player" type="AudioStreamPlayer3D" parent="."]
pitch_scale = 0.5
bus = &"General (big)"

[node name="fire_lit_player2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6")
pitch_scale = 0.5
bus = &"General (big)"

[node name="stone_wall6" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 7.5, 0.75)
size = Vector3(7.5, 0.5, 1)

[node name="lever_count_light" parent="." instance=ExtResource("10")]
transform = Transform3D(-0.642788, 0.766044, 0, -0.766044, -0.642788, 0, 0, 0, 1, -1.6, 5.77616, 2.20647)

[node name="mesh" parent="lever_count_light" index="0"]
mesh = SubResource("ArrayMesh_70811")

[node name="lever_count_light2" parent="." instance=ExtResource("10")]
transform = Transform3D(-0.920505, 0.390731, 0, -0.390731, -0.920505, 0, 0, 0, 1, -0.206, 6.73703, 2.20015)

[node name="mesh" parent="lever_count_light2" index="0"]
mesh = SubResource("ArrayMesh_hdf6d")

[node name="lever_count_light4" parent="." instance=ExtResource("10")]
transform = Transform3D(-0.642788, -0.766044, 0, 0.766044, -0.642788, 0, 0, 0, 1, 4.099, 5.776, 2.206)

[node name="mesh" parent="lever_count_light4" index="0"]
mesh = SubResource("ArrayMesh_titls")

[node name="lever_count_light5" parent="." instance=ExtResource("10")]
transform = Transform3D(-0.920505, -0.390731, 0, 0.390731, -0.920505, 0, 0, 0, 1, 2.687, 6.737, 2.206)

[node name="mesh" parent="lever_count_light5" index="0"]
mesh = SubResource("ArrayMesh_b7tw2")

[connection signal="body_entered" from="fire_light_area" to="." method="_on_fire_light_area_body_entered"]

[editable path="torch_holder"]
[editable path="torch_holder/fire"]
[editable path="torch_holder2"]
[editable path="torch_holder2/fire"]
[editable path="lever_count_light"]
[editable path="lever_count_light2"]
[editable path="lever_count_light4"]
[editable path="lever_count_light5"]
